k8s/03-order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
  namespace: suilens-2206082650
spec:
  selector:
    app: order-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
