k8s/04-notification-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-db
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-db
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: notification-db
  namespace: suilens-2206082650
spec:
  selector:
    app: notification-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
