k8s/05-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: rakhadavinalamsyah/suilens-catalog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: suilens-2206082650
spec:
  selector:
    app: catalog-service
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
