k8s/06-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: rakhadavinalamsyah/suilens-order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: suilens-2206082650
spec:
  selector:
    app: order-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
