k8s/07-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: rakhadavinalamsyah/suilens-notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: suilens-2206082650
spec:
  selector:
    app: notification-service
  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30033
  type: NodePort
