k8s/09-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: suilens-2206082650
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rakhadavinalamsyah/suilens-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: suilens-2206082650
spec:
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30173
  type: NodePort
